src/test/ui/lazy-type-alias-impl-trait/branches.stderr
error[E0277]: a value of type `Bar` cannot be built from an iterator over elements of type `_`
  --> $DIR/branches.rs:19:9
   |
LL |         std::iter::empty().collect()
   |         ^^^^^^^^^^^^^^^^^^ ------- required by a bound introduced by this call
   |         |
   |         value of type `Bar` cannot be built from `std::iter::Iterator<Item=_>`
   |
   = help: the trait `FromIterator<_>` is not implemented for `Bar`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `collect`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
